Bring back scrolling

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,8 @@ body {
     align-items: center;
     justify-content: center;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body::before {
