--- a/styles/style.css
+++ b/styles/style.css
@@ -234,9 +234,10 @@ main {
   border-radius: 8px;
   object-fit: cover;
   scroll-snap-align: start;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  //box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   animation: popIn 0.3s ease-out;
-  transition: transform 0.2s;
+  transition: transform 0.2s, opacity 0.3s;
 }
 
 .preview-img:hover {
@@ -246,6 +247,8 @@ main {
 #edit-screen {
   text-align: center;
   padding: 2em;
+  animation: popIn 0.3s ease-out;
+  transition: transform 0.2s;
 }
 
 #edit-area {
